// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-file-dropzone feedback include-state-icon should hide custom feedback icon when include-state-icon is false and feedback type is error 1`] = `
<modus-wc-file-dropzone include-state-icon="false">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content invalid-file-type" role="button" tabindex="0">
      <div class="default-content">
        <span>
          Feedback message
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback include-state-icon should hide custom feedback icon when include-state-icon is false and feedback type is info 1`] = `
<modus-wc-file-dropzone include-state-icon="false">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dragging-over dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <span>
          Feedback message
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback include-state-icon should hide custom feedback icon when include-state-icon is false and feedback type is success 1`] = `
<modus-wc-file-dropzone include-state-icon="false">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content upload-success" role="button" tabindex="0">
      <div class="default-content">
        <span>
          Feedback message
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback include-state-icon should hide preset feedback icon when include-state-icon is false and feedback type is error 1`] = `
<modus-wc-file-dropzone include-state-icon="false">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content invalid-file-type" role="button" tabindex="0">
      <div class="default-content">
        <span>
          Feedback message
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback include-state-icon should hide preset feedback icon when include-state-icon is false and feedback type is info 1`] = `
<modus-wc-file-dropzone include-state-icon="false">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dragging-over dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <span>
          Feedback message
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback include-state-icon should hide preset feedback icon when include-state-icon is false and feedback type is success 1`] = `
<modus-wc-file-dropzone include-state-icon="false">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content upload-success" role="button" tabindex="0">
      <div class="default-content">
        <span>
          Feedback message
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should display custom icon when feedback type is error with icon 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content invalid-file-type" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="error-icon" name="warning" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should display custom icon when feedback type is info with icon 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dragging-over dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="info" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should display custom icon when feedback type is success with icon 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content upload-success" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="success-icon" name="calendar_check" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should display error state when feedback type is error with message 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content invalid-file-type" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="error-icon" name="alert" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Upload failed
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should display info state when feedback type is info with message 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dragging-over dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Release to upload
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should display no message when feedback type is error without message 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content invalid-file-type" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="error-icon" name="alert" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should display no message when feedback type is info without message 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dragging-over dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should display no message when feedback type is success without message 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content upload-success" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="success-icon" name="check_circle" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should display success state when feedback type is success with message 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content upload-success" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="success-icon" name="check_circle" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Upload complete!
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should prioritize actual drag over feedback error state 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dragging-over dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Drop files here
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should prioritize feedback over internal validation state 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content upload-success" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="success-icon" name="check_circle" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Override success
        </span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone feedback should return to default state when feedback is cleared 1`] = `
<modus-wc-file-dropzone instructions="Upload files here">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Upload files here
        </span>
        <div style="display: block;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should render with accept-file-types prop 1`] = `
<modus-wc-file-dropzone accept-file-types=".jpg,.png,image/*">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input accept=".jpg,.png,image/*" class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: block;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should render with custom drag-over instructions 1`] = `
<modus-wc-file-dropzone file-dragged-over-instructions="Release to upload">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: block;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should render with custom instructions 1`] = `
<modus-wc-file-dropzone instructions="Upload documents here">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span>
          Upload documents here
        </span>
        <div style="display: block;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should render with default props 1`] = `
<modus-wc-file-dropzone>
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input modus-wc-file-input" type="file">
    <div aria-disabled="false" class="dropzone-content" role="button" tabindex="0">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: block;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;

exports[`modus-wc-file-dropzone should render with disabled prop 1`] = `
<modus-wc-file-dropzone disabled="">
  <!---->
  <div class="modus-wc-file-dropzone">
    <input class="file-input file-input-disabled modus-wc-file-input" disabled="" type="file">
    <div aria-disabled="true" class="dropzone-content" role="button" tabindex="-1">
      <div class="default-content">
        <modus-wc-icon class="upload-icon" name="cloud_upload" size="lg" variant="solid"></modus-wc-icon>
        <span></span>
        <div style="display: none;"></div>
      </div>
    </div>
  </div>
</modus-wc-file-dropzone>
`;
